--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "docx": "^9.1.0",
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.8.0",
     "mongoose": "^8.9.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "officegen": "^0.6.5",
     "openai": "4.20.1",
+    "pdf-parse": "^1.1.1",
     "stripe": "^17.5.0"
   }
 }
