--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.9.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "officegen": "^0.6.5",
     "openai": "4.20.1",
     "pdf-parse": "^1.1.1",
