--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "nodemailer": "^6.9.16",
     "officegen": "^0.6.5",
     "openai": "4.20.1",
+    "ovh": "^2.0.3",
     "pdf-parse": "^1.1.1",
-    "stripe": "^17.5.0"
+    "stripe": "^17.5.0",
+    "twilio": "^5.4.0"
   }
 }
